try to register

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   --first-color: rgb(255, 163, 163);
   --second-color: rgb(218, 189, 189);
   --medium-mb: 4.5rem;
+  --big-mb: 10rem;
   --big-box-padding: 1.5rem;
   --input-border-radius: 5px;
   --medium-button-padding: 1rem;
