--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -1,5 +1,10 @@
 .header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
   margin-bottom: var(--big-mb);
+  border-radius: 27px;
+  background-color: var(--first-color);
+  box-shadow: var(--main-box-shadow);
 }
