--- a/src/components/NavLink/NavLink.module.css
+++ b/src/components/NavLink/NavLink.module.css
@@ -1,11 +1,14 @@
+.link {
+  padding: 0.5rem;
+}
+
 @media screen and (min-width: 500px) {
   .link {
     font-size: 20px;
-    padding: 0.5rem;
   }
 }
 
 .active-link {
   background-color: var(--main-background-color);
-  border-radius: var(--input-border-radius);
+  border-radius: 5px;
 }
