--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,12 @@
   --main-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   --first-color: rgb(255, 163, 163);
   --second-color: rgb(218, 189, 189);
+  --accent-color: rgb(255, 255, 255);
+  --gradient: linear-gradient(
+    180deg,
+    rgba(176, 29, 29, 0) -3.208%,
+    rgb(242, 168, 168) 71.128%
+  );
   --medium-mb: 4.5rem;
   --big-mb: 10rem;
   --big-box-padding: 1.5rem;
