--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -1,4 +1,4 @@
-.header {
+.app-bar {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -6,4 +6,11 @@
   border-radius: 27px;
   background-color: var(--first-color);
   box-shadow: var(--main-box-shadow);
+  font-size: 14px;
+}
+
+@media screen and (min-width: 400px) {
+  .app-bar {
+    font-size: 16px;
+  }
 }
