--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,7 +1,43 @@
 .form {
-  width: 200px;
+  max-width: 400px;
   display: flex;
   flex-direction: column;
   row-gap: 3rem;
   margin: auto;
+  padding: 3rem;
+  box-shadow: var(--main-box-shadow);
+  border-radius: 62px;
+  box-shadow: 0px 4px 7px 3px rgba(0, 0, 0, 0.41);
+  background-color: var(--second-color);
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  row-gap: 5px;
+}
+
+.label {
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.form-field {
+  font-size: unset;
+  max-width: 433px;
+  padding: 21px 27px 21px;
+  border: none;
+  border-radius: 22px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  background-color: var(--main-background-color);
+  cursor: pointer;
+}
+
+.form-field:focus {
+  border: 1px solid var(--first-color);
+  outline: 1px solid var(--first-color);
+}
+
+.error-message {
+  color: red;
 }
