--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -9,6 +9,7 @@
   border-radius: 62px;
   box-shadow: 0px 4px 7px 3px rgba(0, 0, 0, 0.41);
   background-color: var(--second-color);
+  margin-bottom: 3rem;
 }
 
 .form-group {
@@ -31,6 +32,9 @@
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   background-color: var(--main-background-color);
   cursor: pointer;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .form-field:focus {
