--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
   --first-color: rgb(255, 163, 163);
   --second-color: rgb(218, 189, 189);
   --accent-color: rgb(255, 255, 255);
+  --extra-color: rgb(140, 153, 221);
+  --extra-color-2: rgb(183, 183, 183);
   --gradient: linear-gradient(
     180deg,
     rgba(176, 29, 29, 0) -3.208%,
@@ -23,6 +25,13 @@ body {
   color: rgba(1, 1, 1, 0.8);
   line-height: 1.5;
   letter-spacing: 0.03em;
+  font-size: 14px;
+}
+
+@media screen and (min-width: 400px) {
+  body {
+    font-size: 16px;
+  }
 }
 
 h1,
