--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -1,5 +1,6 @@
 .user-menu-container {
   display: flex;
+  justify-content: space-between;
   gap: 1rem;
   flex-wrap: wrap;
   align-items: center;
@@ -16,6 +17,20 @@
   height: 1.5rem;
 }
 
+@media screen and (min-width: 900px) {
+  .user-menu-container .logout-icon {
+    display: block;
+    width: 2rem;
+    height: 2rem;
+  }
+}
+
 .user-menu-text {
   font-weight: 500;
+}
+
+@media screen and (min-width: 900px) {
+  .user-menu-text {
+    font-size: 20px;
+  }
 }
