--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -3,13 +3,21 @@
   display: flex;
   flex-direction: column;
   row-gap: 3rem;
-  margin: auto;
-  padding: 3rem;
+  padding: 2rem;
   box-shadow: var(--main-box-shadow);
   border-radius: 62px;
   box-shadow: 0px 4px 7px 3px rgba(0, 0, 0, 0.41);
   background-color: var(--second-color);
-  margin-bottom: 3rem;
+}
+
+.center-form {
+  margin: auto;
+}
+
+@media screen and (min-width: 400px) {
+  .form {
+    padding: 3rem;
+  }
 }
 
 .form-group {
