--- a/src/components/common/Section/Section.module.css
+++ b/src/components/common/Section/Section.module.css
@@ -1,6 +1,12 @@
 .section {
-  padding-top: 5rem;
+  padding-top: 3rem;
   padding-bottom: 5rem;
+}
+
+@media screen and (min-width: 500px) {
+  .section {
+    padding-top: 5rem;
+  }
 }
 
 .home-section {
