--- a/src/pages/ContactsPage/ContactsPage.module.css
+++ b/src/pages/ContactsPage/ContactsPage.module.css
@@ -1,19 +1,27 @@
-@media screen and (min-width: 768px) {
+.top-container {
+  display: flex;
+  column-gap: 5rem;
+  row-gap: 2rem;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 2rem;
+}
+
+@media screen and (min-width: 700px) {
   .top-container {
-    display: flex;
-    column-gap: 3rem;
-    flex-wrap: wrap;
+    row-gap: 5rem;
+    margin-bottom: 5rem;
   }
 }
 
 .main-title {
   text-align: center;
   font-weight: 500;
-  margin-bottom: var(--medium-mb);
+  margin-bottom: 2rem;
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 600px) {
   .main-title {
-    font-size: 4.5rem;
+    margin-bottom: 5rem;
   }
 }
