--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -1,10 +1,8 @@
 .filter-box {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
   gap: 1rem;
-  margin-bottom: var(--medium-mb);
+  font-weight: 500;
 }
 
 .filter-input {
@@ -14,6 +12,7 @@
   border-radius: var(--input-border-radius);
   border: 1px solid var(--first-color);
   transition: border;
+  box-shadow: var(--main-box-shadow);
 }
 
 @media screen and (min-width: 500px) {
