--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   gap: 1rem;
   padding: 1rem;
   background-color: var(--main-background-color);
@@ -57,4 +57,19 @@
   display: flex;
   flex-direction: column;
   row-gap: 1rem;
+}
+
+.contact-input {
+  cursor: pointer;
+  width: 100%;
+  padding: 0.5rem;
+  border-radius: var(--input-border-radius);
+  border: 1px solid var(--first-color);
+  transition: border;
+  box-shadow: var(--main-box-shadow);
+}
+
+.contact-input:focus {
+  border: 2px solid var(--first-color);
+  outline: none;
 }
