--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,9 +1,16 @@
 .modal {
+    width: 300px;
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 1rem;
-    background-color: var(--extra-color);
-    border: 1px solid var(--accent-color);
+    display: flex;
+    flex-direction: column;
+    row-gap: 1.5rem;
+    padding: 1.5rem;
+    background-color: var(--extra-color-2);
+    font-size: 16px;
+    border: 1px solid var(--first-color);
+    border-radius: 15px;
+    box-shadow: var(--main-box-shadow);
 }
