--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,20 +1,14 @@
 .contact-list {
-  display: grid;
-  grid-template-columns: repeat(1, auto);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
   gap: 2rem;
   justify-content: center;
 }
 
 @media screen and (min-width: 600px) {
   .contact-list {
-    grid-template-columns: repeat(2, 250px);
+    flex-direction: row;
+    flex-wrap: wrap;
   }
 }
-
-@media screen and (min-width: 800px) {
-  .contact-list {
-    grid-template-columns: repeat(2, 350px);
-  }
-}
-
-
