--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,15 +1,17 @@
 .contact-item {
-  width: 300px;
-  height: 100px;
+  min-width: 250px;
+  /* height: 100px; */
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
   gap: 1rem;
   padding: 1rem;
   background-color: var(--main-background-color);
   border: 1px solid var(--first-color);
   border-radius: var(--main-border-radius);
   box-shadow: var(--main-box-shadow);
+  overflow: hidden;
 }
 
 .name-text,
@@ -60,6 +62,9 @@
   border: 1px solid var(--first-color);
   transition: border;
   box-shadow: var(--main-box-shadow);
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .contact-input:focus {
