--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -35,7 +35,7 @@
   background-color: var(--second-color);
 }
 
-.item-icon-box {
+.editable-input {
   display: flex;
   align-items: center;
   gap: 0.5rem;
