--- a/src/components/common/Form/Form.module.css
+++ b/src/components/common/Form/Form.module.css
@@ -1,5 +1,5 @@
 .form {
-  max-width: 400px;
+  max-width: 350px;
   display: flex;
   flex-direction: column;
   row-gap: 3rem;
@@ -8,6 +8,12 @@
   border-radius: 62px;
   box-shadow: 0px 4px 7px 3px rgba(0, 0, 0, 0.41);
   background-color: var(--second-color);
+}
+
+@media screen and (min-width: 600px) {
+  .form {
+    max-width: 400px;
+  }
 }
 
 .center-form {
