--- a/src/components/common/Loader/Loader.module.css
+++ b/src/components/common/Loader/Loader.module.css
@@ -1,3 +1,18 @@
-.loader {
-    margin-top: 20px;
+.backdrop {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.loader-group {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3rem;
 }
