--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,34 @@
   --main-background-color: rgb(255, 255, 255);
   --main-border-radius: 20px;
   --main-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  --first-color: rgb(255, 163, 163);
+
+  /* OPTION PALETTE */
+  --first-color: rgb(193, 223, 255); /* Soft pastel blue */
+  --second-color: rgb(224, 224, 224); /* Light grey */
+  --accent-color: rgb(255, 255, 255); /* White */
+  --extra-color: rgb(255, 204, 204); /* Light pastel pink */
+  --extra-color-2: rgb(221, 221, 221); /* Light neutral grey */
+
+  /* OPTION PALETTE */
+  --first-color: rgb(255, 224, 204); /* Soft pastel peach */
+  --second-color: rgb(224, 224, 224); /* Light grey */
+  --accent-color: rgb(255, 255, 255); /* White */
+  --extra-color: rgb(255, 204, 204); /* Light pastel pink */
+  --extra-color-2: rgb(221, 221, 221); /* Light neutral grey */
+
+  /* OPTION PALETTE */
+  --first-color: rgb(210, 224, 211); /* Soft pastel green */
+  --second-color: rgb(225, 230, 231); /* Light pastel teal */
+  --accent-color: rgb(255, 255, 255); /* White */
+  --extra-color: rgb(245, 242, 227); /* Light pastel beige */
+  --extra-color-2: rgb(200, 200, 200); /* Light neutral grey */
+
+  
+  /* --first-color: rgb(255, 163, 163);
   --second-color: rgb(218, 189, 189);
   --accent-color: rgb(255, 255, 255);
   --extra-color: rgb(140, 153, 221);
-  --extra-color-2: rgb(183, 183, 183);
+  --extra-color-2: rgb(183, 183, 183); */
   --gradient: linear-gradient(
     180deg,
     rgba(176, 29, 29, 0) -3.208%,
