--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -14,60 +14,47 @@
   overflow: hidden;
 }
 
-.name-text,
-.number-text {
-  font-size: 14px;
-}
-
-.contact-button {
-  align-self: center;
-  font-size: 14px;
-  padding: 1rem;
-  border: 0;
-  background-color: var(--first-color);
-  border-radius: var(--main-border-radius);
-  cursor: pointer;
-  transition: background-color 250ms linear;
-}
-
-.delete-button:hover,
-.delete-button:focus {
-  background-color: var(--second-color);
-}
-
-.editable-input {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.contact-person-icon,
-.contact-phone-icon {
-  color: var(--first-color);
-  width: 1.5rem;
-  height: 1.5rem;
-  cursor: pointer;
-}
-
 .contact-info-wrapper {
   display: flex;
   flex-direction: column;
   row-gap: 1rem;
 }
 
-.contact-input {
-  width: 100%;
-  padding: 0.5rem;
-  border-radius: var(--input-border-radius);
-  border: 1px solid var(--first-color);
-  transition: border;
-  box-shadow: var(--main-box-shadow);
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
+.contact-text-box {
+  display: flex;
+  gap: 1rem;
 }
 
-.contact-input:focus {
-  border: 2px solid var(--first-color);
-  outline: none;
+.name-text,
+.number-text {
+  font-size: 14px;
+}
+
+.contact-person-icon,
+.contact-phone-icon,
+.button-icon {
+  color: var(--first-color);
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.contact-btn {
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+}
+
+.button-icon {
+  transition: transform 250ms linear;
+}
+
+.button-icon:hover,
+.button-icon:active {
+  transform: scale(1.5);
+}
+
+.button-box {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
